# app/swagger.json
@@ -373,7 +373,7 @@
         }
       }
     },
-    "/order": {
+    "/orders": {
       "post": {
         "summary": "Create order",
         "security": [
@@ -423,7 +423,7 @@
         }
       }
     },
-    "/order/{id}": {
+    "/orders/{id}": {
       "get": {
         "summary": "Get order by id",
         "security": [
